project('slalib', 'fortran',
  version: '1.0',
)

src_lst = [
	'addet.f',
	'aoppat.f',
	'caldj.f',
	'cr2af.f',
	'dat.f',
	'dd2tf.f',
	'dm2av.f',
	'drange.f',
	'dtf2r.f',
	'dvn.f',
	'el2ue.f',
	'eqeqx.f',
	'fk524.f',
	'geoc.f',
	'imxv.f',
	'mapqkz.f',
	'oapqk.f',
	'pertel.f',
	'prebn.f',
	'pxy.f',
	'refv.f',
	'sep.f',
	'tp2s.f',
	'vdv.f',
	'afin.f',
	'aopqk.f',
	'calyd.f',
	'cr2tf.f',
	'dav2m.f',
	'de2h.f',
	'dmat.f',
	'dranrm.f',
	'dtp2s.f',
	'dvxv.f',
	'epb.f',
	'eqgal.f',
	'fk52h.f',
	'gmst.f',
	'intin.f',
	'moon.f',
	'obs.f',
	'pertue.f',
	'prec.f',
	'range.f',
	'refz.f',
	'sepv.f',
	'tp2v.f',
	'veri.f',
	'airmas.f',
	'atmdsp.f',
	'cc2s.f',
	'cs2c.f',
	'dbear.f',
	'deuler.f',
	'dmoon.f',
	'ds2c6.f',
	'dtp2v.f',
	'e2h.f',
	'epb2d.f',
	'etrms.f',
	'fk54z.f',
	'gmsta.f',
	'invf.f',
	'mxm.f',
	'pa.f',
	'planel.f',
	'preces.f',
	'ranorm.f',
	'rverot.f',
	'smat.f',
	'tps2c.f',
	'vers.f',
	'altaz.f',
	'atms.f',
	'cc62s.f',
	'cs2c6.f',
	'dbjin.f',
	'dfltin.f',
	'dmxm.f',
	'ds2tp.f',
	'dtps2c.f',
	'earth.f',
	'epco.f',
	'euler.f',
	'fk5hz.f',
	'h2e.f',
	'kbj.f',
	'mxv.f',
	'pav.f',
	'planet.f',
	'precl.f',
	'rcc.f',
	'rvgalc.f',
	'subet.f',
	'tpv2c.f',
	'vn.f',
	'amp.f',
	'atmt.f',
	'cd2tf.f',
	'ctf2d.f',
	'dc62s.f',
	'dh2e.f',
	'dmxv.f',
	'dsep.f',
	'dtpv2c.f',
	'ecleq.f',
	'epj.f',
	'evp.f',
	'flotin.f',
	'h2fk5.f',
	'm2av.f',
	'nut.f',
	'pcd.f',
	'plante.f',
	'prenut.f',
	'rdplan.f',
	'rvlg.f',
	'supgal.f',
	'ue2el.f',
	'vxv.f',
	'ampqk.f',
	'av2m.f',
	'cldj.f',
	'ctf2r.f',
	'dcc2s.f',
	'dimxv.f',
	'dpav.f',
	'dsepv.f',
	'dtt.f',
	'ecmat.f',
	'epj2d.f',
	'fitxy.f',
	'galeq.f',
	'hfk5z.f',
	'map.f',
	'nutc.f',
	'pda2h.f',
	'plantu.f',
	'pv2el.f',
	'refco.f',
	'rvlsrd.f',
	'svd.f',
	'ue2pv.f',
	'wait.f',
	'aop.f',
	'bear.f',
	'clyd.f',
	'daf2r.f',
	'dcmpf.f',
	'djcal.f',
	'dr2af.f',
	'dt.f',
	'dv2tp.f',
	'ecor.f',
	'epv.f',
	'fk425.f',
	'galsup.f',
	'idchf.f',
	'mappa.f',
	'nutc80.f',
	'pdq2h.f',
	'pm.f',
	'pv2ue.f',
	'refcoq.f',
	'rvlsrk.f',
	'svdcov.f',
	'unpcd.f',
	'xy2xy.f',
	'aoppa.f',
	'caf2r.f',
	'combn.f',
	'dafin.f',
	'dcs2c.f',
	'djcl.f',
	'dr2tf.f',
	'dtf2d.f',
	'dvdv.f',
	'eg50.f',
	'eqecl.f',
	'fk45z.f',
	'ge50.f',
	'idchi.f',
	'mapqk.f',
	'oap.f',
	'permut.f',
	'polmo.f',
	'pvobs.f',
	'refro.f',
	's2tp.f',
	'svdsol.f',
	'v2tp.f',
	'zd.f',
	'gresid.F',
	'random.F'
]

lib_sla = library(
  'sla',
  src_lst,
  install: true,
)

lib_sla_dep = declare_dependency(
  link_with: lib_sla,
)
